--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "dotenv": "^4.0.0",
     "express": "^4.15.3",
+    "mongodb": "^2.2.30",
     "request": "^2.81.0"
   },
   "devDependencies": {
